<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <fragment
        android:id="@+id/nav_host_fragment_content_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/mobile_navigation" />


    <Button
        android:id="@+id/tosignup"
        android:layout_width="291dp"
        android:layout_height="76dp"
        android:layout_gravity="start"
        android:layout_marginStart="77dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="132dp"
        android:background="#C0D3ED"
        android:text="@string/action_signup"
        android:textAllCaps="false"
        android:textColor="#585A62"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="304dp"
        android:layout_height="123dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="126dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_tag"
        android:textAlignment="center"
        android:textColor="#647898"
        android:textSize="45sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="163dp"
        android:text="@string/tagline"
        android:textColor="#585A62"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="143dp"
        android:layout_height="124dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="206dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/untitled_design_removebg_preview" />

    <Button
        android:id="@+id/tologin"
        android:layout_width="291dp"
        android:layout_height="76dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="132dp"
        android:background="#C0D3ED"
        android:text="@string/action_login"
        android:textAllCaps="false"
        android:textColor="#585A62"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tosignup" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="237dp"
        android:layout_marginBottom="160dp"
        android:text="@string/help"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tologin" />

</androidx.constraintlayout.widget.ConstraintLayout>